# 2dkits

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README  README.md  sdkconfig  tupload  upload
.github/workflows/: .sanity.yml.swp  sanity.yml  sanity_8x16.yml  sanity_cube.yml  sanity_tixclock.yml  sanity_tower.yml
8x16_matrix/: CMakeLists.txt  README  sdkconfig  tupload  upload
8x16_matrix/disk_image/: about.html  anoy.pat  boom.pat  build.html  colcol1.pat  colcol2.pat  cross.pat  diamon1.pat  diamon2.pat  header.html  index.html  musical.pat  musical2.pat  patterns.html  pong.pat  sinewave.pat  slider.pat  space.pat  space2.pat  styles.css  t_test.pat
8x16_matrix/main/: 8x16_matrix_main.c  CMakeLists.txt  board_pins.h  builtin_patterns.c  console_usb.c  file_sha.c  hash.py  led_map.c  led_map.h  numbers_led.c  version.h
blaster/: CMakeLists.txt  Makefile  README  current_firmware.txt  current_test_firmware.txt  partitions.csv  sdkconfig  sdkconfig.old  tupload  upload
blaster/disk_image/: about.html  build.html  header.html  index.html  settings.html
blaster/main/: CMakeLists.txt  blaster_main.c  blaster_main.h  bmpfile.h  cmd_pattern.c  cmd_tixclock.c  decode_jpeg.c  decode_jpeg.h  decode_png.c  decode_png.h  display.c  display.h  encoder.c  encoder.h  file_sha.c  file_sha.h  fontx.c  fontx.h  hash.py  led_driver.h  led_driver_charlie.c  led_driver_matrix.c  pattern_engine.c  st7789.c  st7789.h  tixclock_main.c  version.h  web_server.c  web_server.h
bleprph/: sdkconfig  sdkconfig.old
bleprph/main/: gatt_svr.c  main.c
common/main/: captdns.c  captdns.h  cmd_dfu.c  cmd_download.c  cmd_pattern.c  cmd_system.c  cmd_system.h  cmd_wifi.c  console.c  console.h  dfu.c  dfu.h  disk_system.c  download_file.c  font.c  font.h  global.c  global.h  led_driver.c  led_driver.h  pattern_engine.c  queued_i2s_parallel.c  queued_i2s_parallel.h  sha_file.c  upgrade_disk.c  upgrade_disk.h  web_server.c
common/picoc/: CMakeLists.txt  clibrary.c  cmd_picoc.c  include.c  interpreter.h  platform.h
cube/: CMakeLists.txt  Makefile  README  sdkconfig  tupload  upload
cube/disk_image/: about.html  build.html  footer.html  header.html  index.html
cube/main/: CMakeLists.txt  builtin_patterns.h  file_sha.c  file_sha.h  global.c  hash.py  led_driver.c  led_driver.h  led_map.c  led_map.h  numbers_led.c  numbers_led.h  pattern_engine.c  pattern_engine.h  version.h
cube/patterns/: Makefile  core_helper.c  core_utils.c  core_utils.h  cubes.c  hello.c  maze.c  pattern_anoy.c  pattern_axis.c  pattern_boom.c  pattern_colcol.c  pattern_cubes.c  pattern_maze.c  pattern_space.c  pattern_twink.c  printled.c  rain.c  testpat0.c  twink.c
disk_image/: about.html  box_rgb.pat  diamon1.pat  footer.html  header.html  index.html  settings.html  styles.css
main/: CMakeLists.txt  Kconfig.projbuild  LED_Driver.c  LED_Driver.h  Tower_main.c  cmd_dfu.c  cmd_download.c  cmd_ota.c  cmd_pattern.c  cmd_system.c  console.c  console.h  dfu.c  dfu.h  disk_system.c  disk_system.h  download_file.c  file_sha.c  global.c  global.h  led_driver.c  led_driver.h  numbers_led.c  numbers_led.h  ota.c  ota.h  pattern_engine.c  pattern_engine.h  sha_file.c  sha_file.h  spi_leds_main.c  tower_main.c  upgrade_disk.c  version.h  web_server.c  web_server.h
patterns/: Makefile  core.c  core_helper.c  core_utils.c  core_utils.h  create.c  create_main.c  pattern_boom.c  pattern_boom.h  pattern_cubes.c  pattern_cubes.h  pattern_diamon.c  pattern_diamon.h  pattern_rain.c  thought.txt
picoc_arduino_esp32/ESP32Program/: ESP32Program.ino  File_system_stuff.ino  TFT.ino  WIFI_stuff.ino  Web_GUI_Stuff.ino  clibrary.ino  debug.c  errno.c  expression.c  font.h  heap.c  include.c  interpreter.h  lex.c  library_unix.c  math.c  parse.c  picoc.h  platform.c  platform_unix.c  screenServer.ino  stdbool.c  stdio.c  stdlib.c  string.c  table.c  type.c  unistd.c  variable.c
test/: ddf_expect.py  ddf_logging.py  ddf_uart.py  scan.py  setLed.py  test_gui.py
test/8x16_matrix.proj/: test_000.py  test_001.py  test_002.py
test/tixclock.proj/: test_000.py  (+2 more)
tixclock/: CMakeLists.txt  Makefile  sdkconfig  tupload  upload
tixclock/main/: CMakeLists.txt  cmd_dfu.c  cmd_wifi.c  console.c  dfu.c  dfu.h  disk_system.c  disk_system.h  download_file.c  download_file.h  file_sha.c  global.c  global.h  led_driver.c  led_driver.h  led_driver_matrix.c  pattern_engine.c  pattern_engine.h  sha_file.c  tixclock_main.c  tixclock_main.h  upgrade_disk.c  version.h  web_server.c  web_server.h_old
tower/: CMakeLists.txt  README  partitions.csv  sdkconfig  tupload  upload
tower/main/: CMakeLists.txt  board_pins.h  builtin_patterns.c  file_sha.c  led_driver.c  led_driver.h  led_map.c  led_map.h  numbers_led.c  pattern_engine.c  pattern_engine.h  tower_main.c  version.h
(+71 files in other folders)
